--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "date-fns": "^2.30.0",
+    "dateformat": "^5.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "pg": "^8.11.3",
+    "psql": "^0.0.1",
     "sequelize": "^6.35.1",
     "sequelize-cli": "^6.6.2",
     "uuid": "^9.0.0"
