--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.1",
     "date-fns": "^2.30.0",
     "dateformat": "^5.0.3",
+    "docker": "^0.2.14",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
